--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,17 @@ uuid = "f5b9415a-ee94-4c1d-9f36-779b616d2866"
 authors = ["ignace decocq"]
 version = "1.0.0-DEV"
 
+[deps]
+AlphaVantage = "6348297c-a006-11e8-3a05-9bbf8830fd7b"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+
 [compat]
 julia = "1"
 
