--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           version: '1.8.5'
       - name: Install dependencies
-        run: julia  -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
-        run: julia  docs/make.jl
+        run: julia --project=docs/ docs/make.jl
