--- a/Project.toml
+++ b/Project.toml
@@ -23,11 +23,12 @@ PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Stonks = "165769d7-5ed9-41fd-9f18-b88cfb146d0e"
 
 [compat]
 AlphaVantage = "0.4"
-Documenter = "0.27"
 DataFrames = "1"
+Documenter = "0.27"
 julia = "1"
 
 [extras]
