--- a/Project.toml
+++ b/Project.toml
@@ -26,17 +26,17 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Stonks = "165769d7-5ed9-41fd-9f18-b88cfb146d0e"
 
 [compat]
-CSV = "0.10"
 AlphaVantage = "0.4"
+CSV = "0.10"
 DataFrames = "1"
 Documenter = "0.27"
-Optimization = "3"
-ModelingToolkit = "8"
-OptimizationOptimJL = "0.1"
-Optim = "1"
-OptimizationMOI = "0.1"
 Ipopt = "1"
-
+ModelingToolkit = "8"
+Optim = "1"
+Optimization = "3"
+OptimizationMOI = "0.1"
+OptimizationOptimJL = "0.1"
+Stonks = "0.2"
 julia = "1"
 
 [extras]
