--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ AlphaVantage = "0.4"
 CSV = "0.10"
 DataFrames = "1"
 Documenter = "0.27"
+ForwardDiff = "0.10"
 Ipopt = "1"
 ModelingToolkit = "8"
 Optim = "1"
