CompatHelper: add new compat entry for Literate at version 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,7 @@ CSV = "0.10"
 DataFrames = "1"
 Documenter = "0.27"
 Ipopt = "1"
+Literate = "2"
 ModelingToolkit = "8"
 Optim = "1"
 Optimization = "3"
