CompatHelper: add new compat entry for Distributions at version 0.25, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 AlphaVantage = "0.4"
 CSV = "0.10"
 DataFrames = "1"
+Distributions = "0.25"
 Documenter = "0.27"
 Ipopt = "1"
 ModelingToolkit = "8"
