--- a/Project.toml
+++ b/Project.toml
@@ -29,13 +29,20 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 AlphaVantage = "0.4"
 CSV = "0.10"
 DataFrames = "1"
+Distributions = "0.25"
 Documenter = "0.27"
+ForwardDiff = "0.10"
 Ipopt = "1"
+IterTools = "1"
+Literate = "2"
+MarketData = "0.13"
 ModelingToolkit = "8"
 Optim = "1"
 Optimization = "3"
 OptimizationMOI = "0.1"
 OptimizationOptimJL = "0.1"
+PlotlyJS = "0.18"
+Plots = "1"
 julia = "1"
 StatsPlots = "0.15.4"
 [extras]
