--- a/Project.toml
+++ b/Project.toml
@@ -12,9 +12,11 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 MarketData = "945b72a4-3b13-509d-9b46-1525bb5c06de"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
