CompatHelper: bump compat for Documenter to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ AlphaVantage = "0.4"
 CSV = "0.10"
 DataFrames = "1"
 Distributions = "0.25"
-Documenter = "0.27"
+Documenter = "0.27, 1"
 ForwardDiff = "0.10"
 Ipopt = "1"
 IterTools = "1"
@@ -43,8 +43,9 @@ OptimizationMOI = "0.1"
 OptimizationOptimJL = "0.1"
 PlotlyJS = "0.18"
 Plots = "1"
-julia = "1"
 StatsPlots = "0.15"
+julia = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
