--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ ForwardDiff = "0.10"
 Ipopt = "1"
 IterTools = "1"
 Literate = "2"
-MarketData = "0.13"
+MarketData = "0.13, 0.14"
 ModelingToolkit = "8"
 Optim = "1"
 Optimization = "3"
@@ -43,8 +43,9 @@ OptimizationMOI = "0.1"
 OptimizationOptimJL = "0.1"
 PlotlyJS = "0.18"
 Plots = "1"
-julia = "1"
 StatsPlots = "0.15"
+julia = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
