CompatHelper: bump compat for ModelingToolkit to 9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -36,15 +36,16 @@ Ipopt = "1"
 IterTools = "1"
 Literate = "2"
 MarketData = "0.13"
-ModelingToolkit = "8"
+ModelingToolkit = "8, 9"
 Optim = "1"
 Optimization = "3"
 OptimizationMOI = "0.1"
 OptimizationOptimJL = "0.1"
 PlotlyJS = "0.18"
 Plots = "1"
-julia = "1"
 StatsPlots = "0.15"
+julia = "1"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
