--- a/Project.toml
+++ b/Project.toml
@@ -10,24 +10,23 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 MarketData = "945b72a4-3b13-509d-9b46-1525bb5c06de"
-ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
-PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+ReinforcementLearning = "158674fc-8238-5cab-b5ba-03dfc80d1318"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 
 [compat]
-AlphaVantage = "0.4"
 CSV = "0.10"
 Documenter = "0.27"
 ForwardDiff = "0.10"
@@ -35,12 +34,10 @@ Ipopt = "1"
 IterTools = "1"
 Literate = "2"
 MarketData = "0.13"
-ModelingToolkit = "8"
 Optim = "1"
 Optimization = "3"
 OptimizationMOI = "0.1"
 OptimizationOptimJL = "0.1"
-PlotlyJS = "0.18"
 Plots = "1"
 StatsPlots = "0.15"
 julia = "1"
