--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 MarketData = "945b72a4-3b13-509d-9b46-1525bb5c06de"
+OpenSpiel = "ceb70bd2-fe3f-44f0-b81f-41608acaf2f2"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
